@@ -12,6 +12,12 @@ git-annex (5.20141232) UNRELEASED; urgency=medium
   * Check git version at runtime, rather than assuming it will be the same
     as the git version used at build time when running git-checkattr and
     git-branch remove.
+  * Switch to using relative paths to the git repository.
+    - This allows the git repository to be moved while git-annex is running in
+      it, with fewer problems.
+    - On Windows, this avoids some of the problems with the absurdly small
+      MAX_PATH of 260 bytes. In particular, git-annex repositories should
+      work in deeper/longer directory structures than before.
 
  -- Joey Hess <id@joeyh.name>  Fri, 02 Jan 2015 13:35:13 -0400
 
